Closed
Bug 414796
Opened 17 years ago
Closed 17 years ago
nsIDOMFile::getAsText("iso-8859-1") only returns first 8192 chars of file
Categories
(Core :: DOM: Core & HTML, defect, P1)
Tracking
()
RESOLVED
FIXED
People
(Reporter: dbaron, Assigned: dcamp)
References
Details
Attachments
(2 files)
12.63 KB,
text/html; charset=us-ascii
|
Details | |
3.98 KB,
patch
|
sicking
:
review+
sicking
:
superreview+
|
Details | Diff | Splinter Review |
When I use nsIDOMFile::getAsText to read in a file, it only gives me the first 8192 characters of that file.
Steps to reproduce:
1. load attached page
2. put any file larger than 8192 characters in the file input
Actual results: alert shows up with "8192"
Expected results: alert gives number of bytes in the file
Flags: blocking1.9?
Assignee | ||
Comment 1•17 years ago
|
||
Assignee: nobody → dcamp
Status: NEW → ASSIGNED
Attachment #300544 -
Flags: superreview?(jonas)
Attachment #300544 -
Flags: review?(jonas)
Comment on attachment 300544 [details] [diff] [review]
fix
Doh! Sorry, I really should have caught this one.
Attachment #300544 -
Flags: superreview?(jonas)
Attachment #300544 -
Flags: superreview+
Attachment #300544 -
Flags: review?(jonas)
Attachment #300544 -
Flags: review+
Flags: blocking1.9? → blocking1.9+
Priority: -- → P1
Assignee | ||
Comment 3•17 years ago
|
||
Checking in src/nsDOMFile.cpp;
/cvsroot/mozilla/content/base/src/nsDOMFile.cpp,v <-- nsDOMFile.cpp
new revision: 1.2; previous revision: 1.1
done
Checking in test/Makefile.in;
/cvsroot/mozilla/content/base/test/Makefile.in,v <-- Makefile.in
new revision: 1.44; previous revision: 1.43
done
RCS file: /cvsroot/mozilla/content/base/test/test_bug414796.html,v
done
Checking in test/test_bug414796.html;
/cvsroot/mozilla/content/base/test/test_bug414796.html,v <-- test_bug414796.html
initial revision: 1.1
done
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Updated•12 years ago
|
Component: DOM: Mozilla Extensions → DOM
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•