Bug 414796: nsIDOMFile::getAsText(iso-8859-1) only returns first 8192 chars of file.  r/sr/blocking-1.9=sicking